language-server/src/tests/snapshots/gleam_language_server__tests__document_symbols__doc_symbols_type_constructor_no_args.snap
---
source: language-server/src/tests/document_symbols.rs
expression: "doc_symbols(TestProject::for_source(code))"
---
[
    DocumentSymbol {
        name: "B",
        detail: None,
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 7,
                character: 1,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 9,
            },
            end: Position {
                line: 1,
                character: 10,
            },
        },
        children: Some(
            [
                DocumentSymbol {
                    name: "C",
                    detail: None,
                    kind: EnumMember,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 2,
                            character: 4,
                        },
                        end: Position {
                            line: 2,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 2,
                            character: 4,
                        },
                        end: Position {
                            line: 2,
                            character: 5,
                        },
                    },
                    children: None,
                },
                DocumentSymbol {
                    name: "D",
                    detail: None,
                    kind: EnumMember,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 4,
                        },
                        end: Position {
                            line: 3,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 3,
                            character: 4,
                        },
                        end: Position {
                            line: 3,
                            character: 5,
                        },
                    },
                    children: None,
                },
                DocumentSymbol {
                    name: "E",
                    detail: None,
                    kind: EnumMember,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 5,
                            character: 4,
                        },
                        end: Position {
                            line: 6,
                            character: 5,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 6,
                            character: 4,
                        },
                        end: Position {
                            line: 6,
                            character: 5,
                        },
                    },
                    children: None,
                },
            ],
        ),
    },
]
