language-server/src/tests/snapshots/gleam_language_server__tests__document_symbols__doc_symbols_type_no_constructors_starting_at_documentation.snap
---
source: language-server/src/tests/document_symbols.rs
expression: "doc_symbols(TestProject::for_source(code))"
---
[
    DocumentSymbol {
        name: "A",
        detail: None,
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 2,
                character: 10,
            },
        },
        selection_range: Range {
            start: Position {
                line: 2,
                character: 9,
            },
            end: Position {
                line: 2,
                character: 10,
            },
        },
        children: None,
    },
]
