language-server/src/tests/snapshots/gleam_language_server__tests__document_symbols__doc_symbols_type_no_constructors_starting_at_empty_doc.snap
---
source: language-server/src/tests/document_symbols.rs
expression: "doc_symbols(TestProject::for_source(code))"
---
[
    DocumentSymbol {
        name: "A",
        detail: None,
        kind: Class,
        tags: None,
        deprecated: None,
        range: Range {
            start: Position {
                line: 3,
                character: 0,
            },
            end: Position {
                line: 4,
                character: 10,
            },
        },
        selection_range: Range {
            start: Position {
                line: 4,
                character: 9,
            },
            end: Position {
                line: 4,
                character: 10,
            },
        },
        children: None,
    },
]
